persistentvolumes.yaml

#pod using the persistent volume claim
apiVersion: v1  
kind: Pod
metadata:
  name: my-pod    
spec:
  containers:
    - name: my-container
      image: nginx
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: my-volume 
  volumes:
    - name: my-volume 
      persistentVolumeClaim:
        claimName: my-pvc
